--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
   box-sizing: border-box;
 }
 
+:root {
+  --main-red-color: #e06262;
+}
+
+.main-red-color {
+  color: var(--main-red-color);
+}
+
 html {
   font-size: 10px;
 }
@@ -37,4 +45,32 @@ html {
 .frame {
   border: 1px solid #484848;
   height: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  align-items: flex-start; /* memulai item secara vertikal dari atas */
+}
+
+.header-title {
+  flex: 1; /* mengambil sisa dari lebar kontainer header yang tersedia */
+  text-align: center;
+
+  font-size: 3.6rem; /* 3.6rm = 36px */
+  font-family: "Homemade Apple", sans-serif;
+  text-transform: lowercase;
+}
+
+.header-btn {
+  font-size: 1.8rem; /* 1,8rem = 18px */
+  font-family: "Bungee", sans-serif;
+
+  padding: 24px;
+
+  background: unset;
+  border: unset;
+  outline: unset;
 }
