--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html {
 
 .container {
   width: 600px;
-  height: 600px;
+  height: 800px;
   background-color: #f2eecb;
   border-radius: 4px;
 
@@ -68,7 +68,45 @@ html {
   font-size: 1.8rem; /* 1,8rem = 18px */
   font-family: "Bungee", sans-serif;
 
-  padding: 24px;
+  padding: 16x;
+  cursor: pointer; /* Memberi kesan bahwa kata add dan clear bisa di klik */
+
+  background: unset;
+  border: unset;
+  outline: unset;
+}
+
+.add {
+  padding: 16px;
+}
+
+.add-form {
+  display: flex;
+  align-items: flex-start;
+}
+
+.add-input {
+  background: unset;
+  border: unset;
+  padding: 0 64px; /* padding atas bawah 0 dan kanan kiri 64px */
+
+  flex: 1;
+
+  border-bottom: 1px solid var(--main-red-color);
+  outline: unset;
+
+  font-family: "Homemade Apple", sans-serif;
+  font-size: 16px;
+  text-transform: lowercase;
+}
+
+.add-btn {
+  font-size: 1.8rem;
+  font-family: "Bungee", sans-serif;
+
+  padding: 16px;
+  padding-right: unset;
+  cursor: pointer;
 
   background: unset;
   border: unset;
