Membuat todo list section

--- a/style.css
+++ b/style.css
@@ -4,10 +4,15 @@
 
 :root {
   --main-red-color: #e06262;
+  --main-black-color: #484848;
 }
 
 .main-red-color {
   color: var(--main-red-color);
+}
+
+.main-black-color {
+  color: var(.main-black-color);
 }
 
 html {
@@ -43,11 +48,12 @@ html {
 }
 
 .frame {
-  border: 1px solid #484848;
+  border: 1px solid var(--main-black-color);
   height: 100%;
 
   display: flex;
   flex-direction: column;
+  justify-content: space-between; /* konten akan berada di paling bawah kontainer */
 }
 
 .header {
@@ -59,6 +65,7 @@ html {
   flex: 1; /* mengambil sisa dari lebar kontainer header yang tersedia */
   text-align: center;
 
+  color: var(--main-black-color);
   font-size: 3.6rem; /* 3.6rm = 36px */
   font-family: "Homemade Apple", sans-serif;
   text-transform: lowercase;
@@ -74,6 +81,15 @@ html {
   background: unset;
   border: unset;
   outline: unset;
+}
+
+.header-btn.main-red-color:active {
+  /* Jika class header-btn di klik maka triger dibawah dijalankan */
+  text-shadow: 1px 1px 2px var(--main-red-color);
+}
+
+.header-btn.main-black-color:active {
+  text-shadow: 1px 1px 2px var(--main-black-color);
 }
 
 .add {
@@ -111,4 +127,33 @@ html {
   background: unset;
   border: unset;
   outline: unset;
+}
+
+.add-btn.main-black-color:active {
+  text-shadow: 1px 1px 2px var(--main-black-color);
+}
+
+.todos {
+  display: flex;
+  flex-direction: column;
+}
+
+.todo {
+  position: relative;
+
+  flex: 1 0 auto; /* flex grow 1, flex ring 0, flex basis auto */
+  text-align: center;
+
+  min-height: 34px;
+  margin: 16px 0 0;
+  font-family: "Homemade Apple", sans-serif;
+  font-size: 24px;
+
+  border-bottom: 1px solid var(--main-red-color);
+}
+
+.todo-text {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
 }
